overflow-fixed

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@
     body {
         padding-bottom: 3rem;
         color: #5a5a5a;
+        overflow-x: hidden;
     }
     /* CUSTOMIZE THE CAROUSEL --------------------------------------------------
 */
@@ -552,6 +553,9 @@
     @media screen and (max-width: 1000px) {
         .burger {
             display: block;
+        }
+        nav {
+            padding: none;
         }
         .nav-list {
             display: none;
